--- a/styles/place.css
+++ b/styles/place.css
@@ -73,6 +73,16 @@ img {
     width: 80%; 
 }
 
+header::after {
+    content: " 🌄";
+    font-size: 1.5rem;
+    margin-left: 0.5rem;
+}
+
+
+#svg {
+    display: block;
+}
 
 .weather-icon {
     width: 50px;
